--- a/server/package.json
+++ b/server/package.json
@@ -7,16 +7,23 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "@navy.gif/passport-discord": "^0.2.2-b",
     "chalk": "^4.0.0",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-fileupload": "^1.3.1",
+    "express-session": "^1.17.2",
+    "fluent-ffmpeg": "^2.1.2",
     "helmet": "^5.0.2",
     "humanize-duration": "^3.27.1",
     "moment": "^2.29.1",
-    "node-fetch": "2"
+    "mongodb": "^4.4.1",
+    "node-fetch": "2",
+    "passport": "^0.5.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
