--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,11 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Navy-gif/homepage.git"
+  },
   "proxy": "http://localhost:4000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
