--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -70,7 +70,10 @@
         "default-case": "error",
         "default-case-last": "error",
         "default-param-last": "error",
-        "dot-location": "error",
+        "dot-location": [
+            "warn",
+            "property"
+        ],
         "dot-notation": [
             "error",
             {
@@ -227,7 +230,7 @@
         "nonblock-statement-body-position": "error",
         "object-curly-newline": "error",
         "object-curly-spacing": "off",
-        "object-property-newline": "error",
+        // "object-property-newline": "error",
         "object-shorthand": "error",
         "one-var": "off",
         "one-var-declaration-per-line": "error",
